style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap');

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: "Roboto", sans-serif;
}

*::before,
*::after {
    box-sizing: inherit;
}

header,
footer {
    background-color: whitesmoke;
    width: 100vw;
    text-align: center;
}

body {
    background-color: lightgray;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
}

main {
    flex: 1;
    display: flex;
    flex-direction: column;
}

.bookshelf {
    border: 1px dashed red;
    align-self: center;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

button {
    padding: 6px;
    font-family: "Roboto", sans-serif;
}

.add-button {
    width: 100px;
    align-self: center;
}

.book-card {
    border: 2px solid black;
    border-radius: 8px;
    padding: 8px;
    background-color: whitesmoke;
    margin: 12px;
    width: 200px;
    overflow: hidden;
    & .read-button {
        width: 100%;
        background-color: lightgreen;
        border-radius: 6px;
        border: 0;
        margin-top: 5px;
        margin-bottom: 5px;
        content: "Read";
    }
    & .notread-button {
        width: 100%;
        background-color: goldenrod;
        border-radius: 6px;
        border: 0;
        margin-top: 5px;
        margin-bottom: 5px;
        content: "Not Read";
    }
    & .rmv-button {
        width: 100%;
        background-color: rgb(255, 70, 70);
        border-radius: 6px;
        border: 0;
    }
    & .centered {
        text-align: center;
    }
}

